--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -22,9 +22,10 @@ h1 {
 
 #navbar {
   height: var(--navbar-height);
-  background-color: linear-gradient(
+  background-color: var(--primary);
+  /* background-color: linear-gradient(
     #31a9e1, #ececec, #f5f5f5, #222, #272822
-  );
+  ); */
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
